--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+rebel.xml
 
 ### NetBeans ###
 /nbproject/private/
@@ -34,3 +35,6 @@ build/
 
 ### MacOS ###
 .DS_Store
+
+### SpringBoot ###
+application.yaml
